--- a/index.html
+++ b/index.html
@@ -6,5 +6,19 @@
     <link rel="stylesheet" href="style.css" />
     <title>Meu portfólio</title>
   </head>
-  <body></body>
+  <body>
+  <img src="img/avatar-perfil.png" alt="avatar da Fernanda" srcset="" />
+  <p>Eu sou Lucas</p>
+  <h1>Eu sou estudante do ensino medio </h1>
+  <p>
+    Sou bom para jogar futebol e para mexer com eletrica
+  </p>
+  <p>Minhas habilidades</p>
+<div>
+    <p>HTML</p>
+    <p>CSS</p>
+    <p>JavaScript</p>
+    <p>Scratch</p>
+  </div>
+
 </html>
