--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Meu portfólio</title>
   </head>
   <body>
+  <header class="container">
   <img src="img/avatar-perfil.png" alt="avatar da Fernanda" srcset="" />
   <p>Eu sou Lucas</p>
   <h1>Eu sou estudante do ensino medio </h1>
@@ -20,5 +21,14 @@
     <p>JavaScript</p>
     <p>Scratch</p>
   </div>
-
+    <header>
+    <div class="container text-center">
+      <div class="row align-items-start">
+        <div class="col">One of three columns</div>
+        <div class="col">One of three columns</div>
+        <div class="col">One of three columns</div>
+      </div>
+    </div>
+    </header>
+  </body>
 </html>
