--- a/index.html
+++ b/index.html
@@ -30,5 +30,37 @@
       </div>
     </div>
     </header>
+      <img
+    src="img/avatar-perfil.png"
+    alt="avatar da Fernanda"
+    class="rounded-circle"
+    width="150"
+    height="150"
+    srcset=""
+  />
+<div>
+    <p class="badge bg-secondary">HTML</p>
+    <p class="badge bg-secondary">CSS</p>
+    <p class="badge bg-secondary">JavaScript</p>
+    <p class="badge bg-secondary">Scratch</p>
+  </div>
+<main class="container">
+  <h2>Meus projetos</h2>
+  <div class="row">
+    <div class="col-md-4">
+      <div class="card" style="width: 18rem;">
+        <img src="..." class="card-img-top" alt="..." />
+        <div class="card-body">
+          <h5 class="card-title">Card title</h5>
+          <p class="card-text">
+            Some quick example text to build on the card title and make up the
+            bulk of the card's content.
+          </p>
+          <a href="#" class="btn btn-primary">Go somewhere</a>
+        </div>
+      </div>
+    </div>
+  </div>
+</main>
   </body>
 </html>
